[package]
name = "randblas"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
nalgebra = "0.33.0"
rand_distr = "0.4.3"
num-traits = "0.2.19"
rand_core = "0.3.0"
rand_123 = { path = "./rust-random123" }

[lib]
path = "src/lib.rs"

[[bin]]
name = "randblas"
path = "src/main.rs"

[dev-dependencies]
approx = "0.5.1"